--- a/AssetExplorer/Views/MainWindow.xaml
+++ b/AssetExplorer/Views/MainWindow.xaml
@@ -156,9 +156,9 @@
                                                                     <DataTrigger Binding="{Binding IsChecked, RelativeSource={RelativeSource AncestorType=CheckBox}, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Value="True">
                                                                         <Setter Property="Source" Value="../Images/greencircle.png" />
                                                                     </DataTrigger>
-                                                                    <DataTrigger Binding="{Binding IsNotActiveLessThan1Month, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Value="True">
+                                                                    <!--<DataTrigger Binding="{Binding IsNotActiveLessThan1Month, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Value="True">
                                                                         <Setter Property="Source" Value="../Images/orangecircle.png" />
-                                                                    </DataTrigger>
+                                                                    </DataTrigger>-->
                                                                 </Style.Triggers>
                                                             </Style>
                                                         </Image.Style>
